[package]
name = "cloud-print"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
fern = "0.6.2"
humantime = "2.1.0"
log = "0.4.20"
notify = "6.1.1"
path_abs = "0.5.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
validator = { version = "0.16.1", features = ["derive"] }
